syntax = "proto3";

option java_package = "com.example";

message HelloRequest {
    string name = 1;
}

message HelloResponse {
    string message = 1;
}

service HelloService {
    rpc HelloUnary (HelloRequest) returns (HelloResponse) {
    }
    rpc HelloServerStreaming (HelloRequest) returns (stream HelloResponse) {
    }
    rpc HelloClientStreaming (stream HelloRequest) returns (HelloResponse) {
    }
    rpc HelloBidirectionalStreaming (stream HelloRequest) returns (stream HelloResponse) {
    }
}
